# LineLens

./: .env.example  .gitignore  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v3.0.0.md  RELEASE_NOTES_v4.0.0.md  RELEASE_NOTES_v4.1.0.md  RELEASE_NOTES_v5.0.md  RELEASE_NOTES_v5.1.md  RELEASE_NOTES_v5.4.0.md  RELEASE_NOTES_v5.6.0.md  app.js  app.py  data_ingest.py  export_predictions.py  feature_builder.py  index.html  package-lock.json  package.json  requirements.txt  sprint5.js  styles.css  train_model.py  widget.css  widget.html  widget.js
data/: app_metadata.js  app_metadata.json  bootstrap_status.js  bootstrap_status.json  predictions.js  refresh_status.js  refresh_status.json  startup_status.js  startup_status.json  team_metadata.js  team_metadata.json
docs/: ARCHITECTURE.md  DATA_DICTIONARY.md  DEMO_CHECKLIST.md  MODEL_EVALUATION.md
models/: mlb_moneyline_model.joblib  mlb_prop_batter_hits_v1.joblib  mlb_prop_batter_total_bases_v1.joblib  mlb_prop_pitcher_strikeouts_v1.joblib  nfl_spread_model.joblib  wnba_moneyline_model.joblib  wnba_prop_assists_v1.joblib  wnba_prop_points_v1.joblib  wnba_prop_rebounds_v1.joblib
scripts/: bootstrap_env.py  build_sprint5_exports.py  build_web_dist.py  check_data_integrity.py  check_data_status.py  check_logo_contract.py  check_props.py  check_refresh_contract.py  check_sprint4.py  check_sprint5.py  demo_check.py  generate_app_icons.py  live_scores.py  local_server.py  odds_snapshots.py  (+12 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+134 files in other folders)
