[package]
name = "linelens-sports"
version = "0.2.0"
description = "LineLens Sports desktop prediction dashboard"
authors = ["LineLens Sports"]
edition = "2021"

[lib]
name = "linelens_sports_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
