[package]
name = "linelens-sports"
version = "4.0.0"
description = "LineLens Sports desktop analytics dashboard"
authors = ["Vraj Patel"]
edition = "2021"
license = "MIT"

[package.metadata.bundle]
identifier = "com.linelens.sports"

[lib]
name = "linelens_sports_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
